# vbq

./: README.md
img-compression/: Balle2017_proposed_compression_stats_on_Kodak.npz  JPEG_compression_stats_on_Kodak.npz  README.md  bls2017_vae.py  img_comparison_metrics.py  learned_prior.py  post_process.py  quantizer.py  requirements.txt  utils.py  vae_models.py
word-embeddings/: README.md  compress-trained-word-embeddings.ipynb  compression-results.shelve.dir
word-embeddings/bayesian-skip-gram/models/: single-timestep.py
word-embeddings/bayesian-skip-gram/preprocess-gbooks/: Cargo.toml  README.md  combine_datasets.py
word-embeddings/bayesian-skip-gram/preprocess-gbooks/src/: bench_buffered_gz_io.rs  lib.rs  mk_npos.rs  mk_vocab.rs  sort_by_year.rs
